fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .users-video {
